Targets feature documentation

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build:frontend": "cd hexagons-client && npm run build",
     "start": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
     "start:backend": "cd hexagons-backend && npm run start",
-    "start:frontend": "cd hexagons-client && npm run start",
+    "start:frontend": "cd hexagons-client && npm run develop",
     "dev:staging": "cd hexagons-client && cross-env NEXT_PUBLIC_API_URL=https://backend.hexagons.app npm run develop",
     "prod:tasmat": "cd hexagons-client && cross-env NEXT_PUBLIC_API_URL=https://tasmat-backend.hexagons.app npm run develop"
   },
